--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,13 @@
-application: spark
+application: code-spark
 version: 1
 runtime: python27
 api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /static
+  static_dir: static
+
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
@@ -14,4 +17,9 @@ handlers:
 
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: "2.5.1"
+- name: jinja2
+  version: latest
+
+builtins:
+- remote_api: on
